--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/readUnderstoodGuidance.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/readUnderstoodGuidance.yml
@@ -2,7 +2,7 @@ name: Understanding the application process
 question: >
   Do you understand the application process for Digital Outcomes and Specialists&nbsp;5 on the Digital Marketplace?
 hint: >
-  You can read about how to apply in the <a href="https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide#how-to-apply" target="_blank" rel="noopener noreferrer">Digital Outcomes and Specialists suppliers’ guide (link opens in a new tab)</a>.
+  You can read about how to apply in the <a href="https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide#how-to-apply" target="_blank" rel="noopener noreferrer">Digital Outcomes and Specialists suppliers’ guide (opens in new tab)</a>.
 type: boolean
 assessment:
   passIfIn:
