--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/serviceStandard.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/serviceStandard.yml
@@ -1,7 +1,7 @@
 name: Digital Service Standard
 question: >
-  Are you aware of, and will you comply with, the <a href="https://www.gov.uk/service-manual/service-standard" target="_blank" rel="noopener noreferrer">Digital Service Standard (link opens in a new tab)</a>
-  and the government’s latest <a href="https://www.gov.uk/design-principles" target="_blank" rel="noopener noreferrer">service design principles (link opens in a new tab)</a>?
+  Are you aware of, and will you comply with, the <a href="https://www.gov.uk/service-manual/service-standard" target="_blank" rel="noopener noreferrer">Digital Service Standard (opens in new tab)</a>
+  and the government’s latest <a href="https://www.gov.uk/design-principles" target="_blank" rel="noopener noreferrer">service design principles (opens in new tab)</a>?
 type: boolean
 assessment:
   passIfIn:
