--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/understandHowToAskQuestions.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/understandHowToAskQuestions.yml
@@ -1,6 +1,6 @@
 name: Asking questions
 question: >
-  Do you understand that you must ask ‘clarification’ questions on the <a href="https://www.digitalmarketplace.service.gov.uk/suppliers/frameworks/digital-outcomes-and-specialists-5/updates" target="_blank" rel="noopener noreferrer">Digital Outcomes and Specialists&nbsp;5 updates page (link opens in a new tab)</a> in your Digital Marketplace account?
+  Do you understand that you must ask ‘clarification’ questions on the <a href="https://www.digitalmarketplace.service.gov.uk/suppliers/frameworks/digital-outcomes-and-specialists-5/updates" target="_blank" rel="noopener noreferrer">Digital Outcomes and Specialists&nbsp;5 updates page (opens in new tab)</a> in your Digital Marketplace account?
 hint: >
   You can ask clarification questions about Digital Outcomes and Specialists&nbsp;5 until 5pm BST 1 August 2525. All questions and answers will be posted regularly on the Digital Outcomes and Specialists&nbsp;5 updates page. You will be notified by email when new clarification questions and answers are available.
 
