--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/equalityAndDiversity.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/equalityAndDiversity.yml
@@ -1,6 +1,6 @@
 name: Equality and diversity obligations
 question: >
-  Please confirm that your organisation complies with legal equality and diversity obligations relating to:
+  Can you confirm that your organisation complies with legal equality and diversity obligations relating to:
 
     - age
     - disability
