--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/safeguardOfficialInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/safeguardOfficialInformation.yml
@@ -1,7 +1,7 @@
 name: Safeguarding official information
 question: >
-  Do you agree to respect <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/715778/May-2018_Government-Security-Classifications-2.pdf" target="_blank" rel="noopener noreferrer">government security classifications (PDF, 528KB, link opens in a new tab)</a>
-  and protect official government information, eg by not revealing that government is the client when advertising for participants?
+  Do you agree to respect <a href="https://www.gov.uk/government/publications/government-security-classifications" target="_blank" rel="noopener noreferrer">government security classifications (opens in new tab)</a>
+  and protect official government information, for example by not revealing that government is the client when advertising for participants?
 type: boolean
 assessment:
   passIfIn:
