--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/skillsAndCapabilityAssessment.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/skillsAndCapabilityAssessment.yml
@@ -1,5 +1,5 @@
 name: Skills and capability assessment
-question: Do you assess the skills and capabilities of people you select to work for your company and could you provide evidence of how you do this, if requested?
+question: Do you assess the skills and capabilities of people you select to work for your organisation and could you provide evidence of how you do this, if requested?
 type: boolean
 assessment:
   passIfIn:
