--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/multiqModernSlavery.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/multiqModernSlavery.yml
@@ -1,6 +1,6 @@
 id: multiqModernSlavery
 name: Modern slavery
-question: You must meet the reporting requirements of section 54 of The Modern Slavery Act (2015) if your organisations has a turnover of £36 million or more a year. Otherwise you can’t submit services on Digital Outcomes and Specialists 5.
+question: If your organisation has an annual turnover of £36 million or more, you must meet the reporting requirements of section 54 of the Modern Slavery Act 2015. Otherwise you cannot submit services on Digital Outcomes and Specialists&nbsp;5.
 
 type: multiquestion
 questions:
