Add missed non-breaking space
So that DOS 5 doesn't get broken up.

--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/employersInsurance.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/employersInsurance.yml
@@ -2,7 +2,7 @@ name: Employer's liability insurance
 question: >
   Does your organisation have, or will it have before the framework is awarded, employer’s liability insurance of at least £5 million?
 hint: |
-  Employer's liability insurance is a legal requirement except for businesses employing the owner or close family members only. You must answer ‘Yes’ or ‘Not applicable’ to be eligible for consideration for the Digital Outcomes and Specialists 5 framework.
+  Employer's liability insurance is a legal requirement except for businesses employing the owner or close family members only. You must answer ‘Yes’ or ‘Not applicable’ to be eligible for consideration for the Digital Outcomes and Specialists&nbsp;5 framework.
 
   If your organisation is not based in the UK or has no UK-based employees, you must answer ‘No’, and the Crown Commercial Service will contact you about compliance with employment laws in the jurisdictions you work.
 type: radios
