Rename tools response to match description
Introduce a value for back-compatibility so this doesn't break pre-fill

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/supportAndOperationsTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/supportAndOperationsTypes.yml
@@ -21,7 +21,8 @@ options:
     description: Provide first or second-line technical support to either internal or external users.
   - label: Systems administration
     description: Install, support and maintain computer systems. Manage user and security policies.
-  - label: Tooling
+  - label: Tools
+    value: Tooling
     description: Set up and maintain tools for continuous integration and deployment of digital services.
 
 validations:
