Change 'types of' questions for DOS 5
Following accessibility review and CCS requests

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userExperienceAndDesignTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userExperienceAndDesignTypes.yml
@@ -1,4 +1,4 @@
-question: What types of user experience and design can you provide?
+question: Types of user experience and design you will provide
 depends:
   - "on": lot
     being:
