--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearchTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearchTypes.yml
@@ -1,4 +1,4 @@
-question: What types of user research can you provide?
+question: Types of user research you will provide
 depends:
   - "on": lot
     being:
