Update list of regions for DOS 5
Separate out Scotland and Wales

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/outcomesLocations.yml
@@ -14,19 +14,19 @@ depends:
       - digital-outcomes
 type: checkboxes
 options:
-  - label: "Offsite"
-  - label: "Scotland"
-  - label: "North East England"
-  - label: "North West England"
-  - label: "Yorkshire and the Humber"
-  - label: "East Midlands"
-  - label: "West Midlands"
-  - label: "East of England"
-  - label: "Wales"
-  - label: "London"
-  - label: "South East England"
-  - label: "South West England"
-  - label: "Northern Ireland"
+  - label: Offsite
+  - label: North East England
+  - label: North West England
+  - label: Yorkshire and the Humber
+  - label: East Midlands
+  - label: West Midlands
+  - label: East of England
+  - label: London
+  - label: South East England
+  - label: South West England
+  - label: Scotland
+  - label: Wales
+  - label: Northern Ireland
 
 validations:
   - name: answer_required
