Update service essentials questions for DOS 5
Following accessibility review and CCS requests

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/bespokeSystemInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/bespokeSystemInformation.yml
@@ -1,5 +1,7 @@
 name: Share systems information
-question: Will you share bespoke system information from the service you’re working on, eg software performance data, to help the government continuously improve its services?
+question: >
+  Will you share bespoke system information from the service you’re working on, such as software performance data, to
+  help the government continuously improve its services?
 type: boolean
 required_value: true
 
@@ -11,4 +13,4 @@ depends:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select if you will share bespoke system information
