--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/accessibleApplicationsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/accessibleApplicationsOutcomes.yml
@@ -1,7 +1,8 @@
 name: Designing and building accessible applications
-question: Will you design and build accessible applications that meet the 2018 accessibility regulations?
+question: >
+  Will you design and build accessible applications that meet the 2018 accessibility regulations?
 hint:
-  Read guidance about how to meet the regulations and <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps">design and build accessible services</a>.
+  Read guidance about how to meet the regulations and <a target="_blank" rel="noopener noreferrer" href="https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps">design and build accessible services (opens new tab)</a>.
 type: boolean
 required_value: true
 
@@ -12,4 +13,4 @@ depends:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select if you will design and build accessible applications
