--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/helpGovernmentImproveServices.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/helpGovernmentImproveServices.yml
@@ -1,5 +1,6 @@
 name: Share non-personal data
-question: Will you share non-personal user and service data to help the government continuously improve its services?
+question: >
+  Will you share non-personal user and service data to help the government continuously improve its services?
 type: boolean
 required_value: true
 
@@ -11,4 +12,4 @@ depends:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select if you will share non-personal user and service data
