--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/dataScientistDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/dataScientistDayRate.yml
@@ -1,12 +1,11 @@
-question: How much do you charge a day for a data scientist (excluding VAT and expenses)?
-question_advice: You won’t be able to charge a higher rate when you apply for opportunities.
+question: What is the maximum you charge a day for a data scientist (excluding VAT and expenses)?
+question_advice: The maximum price will be fixed for the duration of the framework agreement. You won’t be able to charge a higher rate when you apply for opportunities.
 depends:
   - "on": lot
     being:
       - digital-specialists
 type: pricing
 fields:
-  minimum_price: dataScientistPriceMin
   maximum_price: dataScientistPriceMax
 field_defaults:
   price_unit: Person
@@ -14,17 +13,8 @@ field_defaults:
 
 validations:
   - name: answer_required
-    field: dataScientistPriceMin
-    message: 'You need to answer this question.'
-  - name: not_money_format
-    field: dataScientistPriceMin
-    message: "Minimum price must be a number, without units, eg 99.95"
-  - name: answer_required
     field: dataScientistPriceMax
-    message: 'You need to answer this question.'
+    message: Enter the amount you will charge for a data scientist
   - name: not_money_format
     field: dataScientistPriceMax
     message: "Maximum price must be a number, without units, eg 99.95"
-  - name: max_less_than_min
-    field: dataScientistPriceMax
-    message: "Minimum price must be less than maximum price"
