--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/serviceName.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/serviceName.yml
@@ -1,8 +1,6 @@
-name: What is the name of the lab?
-question: |
-  What is the name of the lab?
-
-  Provide the name of the room where participants and researchers carry out testing.
+name: What is the name of the room in the studio where participants and researchers carry out testing?
+question: >
+  What is the name of the room in the studio where participants and researchers carry out testing?
 type: text
 
 depends:
