Update lab questions for DOS 5
Following accessibility review

--- a/frameworks/digital-outcomes-and-specialists-5/metadata/copy_services.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/metadata/copy_services.yml
@@ -1,2 +1,10 @@
-questions_to_exclude: []
+questions_to_exclude:
+  - labDesktopStreaming
+  - labDeviceStreaming
+  - labEyeTracking
+  - labHosting
+  - labStreaming
+  - labTechAssistance
+  - labViewingArea
+  - labWaitingArea
 source_framework: digital-outcomes-and-specialists-4
