--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labDeviceStreaming.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labDeviceStreaming.yml
@@ -7,8 +7,8 @@ depends:
 
 type: radios
 options:
-  - label: Yes – included as standard
-  - label: Yes – for an additional cost
+  - label: Yes, included as standard
+  - label: Yes, for an additional cost
   - label: "No"
 
 validations:
