--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/accessibleApplicationsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/accessibleApplicationsOutcomes.yml
@@ -10,6 +10,7 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
+      - digital-specialists
 
 validations:
   - name: answer_required
