Correct the DOS 5 deadline

--- a/frameworks/digital-outcomes-and-specialists-5/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/messages/homepage-sidebar.yml
@@ -8,7 +8,7 @@ open:
   heading: 'Digital Outcomes and Specialists&nbsp;5 is open for applications'
   messages:
     - 'You need an account to apply.'
-    - 'The application deadline is 5pm&nbsp;BST, 15 August 2525.'
+    - 'The application deadline is 1pm&nbsp;GMT, 13 November 2020.'
 
 pending:
   heading: 'Digital Outcomes and Specialists&nbsp;5 is closed for applications'
