Use better words
No contractions or 'please'

--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/employmentStatus.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/employmentStatus.yml
@@ -1,6 +1,6 @@
 name: Employment status
 question: >
-  Please confirm that you are aware that staff delivering services under this framework must be either:
+  Can you confirm that you are aware that staff delivering services under this framework must be either:
 
     - your employees
     - your subcontractors’ employees
