--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/employmentStatus.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/employmentStatus.yml
@@ -3,8 +3,8 @@ question: >
   Can you confirm that you are aware that staff delivering services under this framework must be either:
 
     - your employees
+    - your subcontractors
     - your subcontractors’ employees
-    - contractors employed by you
 
 type: boolean
 assessment:
