--- a/frameworks/digital-outcomes-and-specialists-5/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/edit_submission.yml
@@ -1,5 +1,5 @@
 -
-  name: Lab name
+  name: Research studio name
   editable: True
   questions:
     - serviceName
@@ -76,7 +76,7 @@
     - userResearcher
     - webOperations
 
-- name: Lab address
+- name: Research studio address
   editable: True
   questions:
     - labAddressBuilding
@@ -91,7 +91,7 @@
     - labPublicTransport
     - labCarPark
 
-- name: Lab size
+- name: Research studio size
   editable: True
   questions:
     - labSize
