--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labAccessibility.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labAccessibility.yml
@@ -2,7 +2,7 @@ name: How accessible is your studio?
 question: >
   How accessible is your studio?
 
-  Describe the ways in which your lab is accessible or inaccessible, such as wheelchair access or hearing loops provided.
+  Describe the ways in which your research studio is accessible or inaccessible, such as wheelchair access or hearing loops provided.
 depends:
   - "on": lot
     being:
