Update region ordering
To match all other region lists. Also remove some errant YAML

--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/locationParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/locationParticipants.yml
@@ -6,22 +6,21 @@ question_advice: |
 
   Suppliers have said where they can recruit participants.
 
-depends:
 type: radios
 options:
-  - label: "Scotland"
-  - label: "North East England"
-  - label: "North West England"
-  - label: "Yorkshire and the Humber"
-  - label: "East Midlands"
-  - label: "West Midlands"
-  - label: "East of England"
-  - label: "London"
-  - label: "South East England"
-  - label: "South West England"
-  - label: "Wales"
-  - label: "Northern Ireland"
-  - label: "International (outside the UK)"
+  - label: North East England
+  - label: North West England
+  - label: Yorkshire and the Humber
+  - label: East Midlands
+  - label: West Midlands
+  - label: East of England
+  - label: London
+  - label: South East England
+  - label: South West England
+  - label: Scotland
+  - label: Wales
+  - label: Northern Ireland
+  - label: International (outside the UK)
 depends:
   - "on": "lot"
     being:
