--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/recruitLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/recruitLocations.yml
@@ -7,16 +7,16 @@ depends:
       - user-research-participants
 type: checkboxes
 options:
-  - label: "Scotland"
-  - label: "North East England"
-  - label: "North West England"
-  - label: "Yorkshire and the Humber"
-  - label: "East Midlands"
-  - label: "West Midlands"
-  - label: "East of England"
-  - label: "Wales"
-  - label: "London"
-  - label: "South East England"
-  - label: "South West England"
-  - label: "Northern Ireland"
-  - label: "International (outside the UK)"
+  - label: North East England
+  - label: North West England
+  - label: Yorkshire and the Humber
+  - label: East Midlands
+  - label: West Midlands
+  - label: East of England
+  - label: London
+  - label: South East England
+  - label: South West England
+  - label: Scotland
+  - label: Wales
+  - label: Northern Ireland
+  - label: International (outside the UK)
