--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/locationSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/locationSpecialists.yml
@@ -6,23 +6,22 @@ question_advice: |
 
   Suppliers have said where they’ll provide specialists.
 
-depends:
 type: radios
 options:
-  - label: "Scotland"
-  - label: "North East England"
-  - label: "North West England"
-  - label: "Yorkshire and the Humber"
-  - label: "East Midlands"
-  - label: "West Midlands"
-  - label: "East of England"
-  - label: "London"
-  - label: "South East England"
-  - label: "South West England"
-  - label: "Wales"
-  - label: "Northern Ireland"
-  - label: "No specific location, for example they can work remotely"
-    value: "Offsite"
+  - label: North East England
+  - label: North West England
+  - label: Yorkshire and the Humber
+  - label: East Midlands
+  - label: West Midlands
+  - label: East of England
+  - label: London
+  - label: South East England
+  - label: South West England
+  - label: Scotland
+  - label: Wales
+  - label: Northern Ireland
+  - label: No specific location, for example they can work remotely
+    value: Offsite
 depends:
   - "on": "lot"
     being:
