--- a/frameworks/digital-outcomes-and-specialists-5/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/edit_brief.yml
@@ -71,7 +71,7 @@
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
 
     - have the least nice&#8209;to&#8209;have skills and experience
-    - can’t start when you need them to
+    - cannot start when you need them to
 
     You may need to ask for evidence of skills and experience if you have too many suppliers.
 
@@ -108,7 +108,7 @@
     Once you have a list of eligible specialists, you can exclude the specialists who:
 
     - have the least nice&#8209;to&#8209;have skills and experience
-    - can’t start when you need them to
+    - cannot start when you need them to
 
     You may need to ask for evidence of skills and experience if you have too many specialists.
 
@@ -141,7 +141,7 @@
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
 
     - have the least nice&#8209;to&#8209;have skills and experience
-    - can’t start when you need them to
+    - cannot start when you need them to
 
     You may need to ask for evidence of skills and experience if you have too many suppliers.
 
