--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/contractLength.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/contractLength.yml
@@ -1,6 +1,6 @@
 name: Expected contract length
 question: Expected contract length
-question_advice: Contracts can’t last for more than 2 years.
+question_advice: Contracts cannot last for more than 2 years.
 type: text
 optional: true
 depends:
