--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/phase.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/phase.yml
@@ -33,7 +33,7 @@ options:
     label: Live
     value: live
     description: >
-      The work doesn’t stop once your service is live. You’ll be iteratively improving your service,
+      The work does not stop once your service is live. You’ll be iteratively improving your service,
       reacting to new needs and demands, and meeting targets set during its development.
 depends:
   - "on": "lot"
