isn't -> is not

--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/culturalFitCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/culturalFitCriteriaSpecialists.yml
@@ -12,7 +12,7 @@ question_advice: |
   - how the specialist shares knowledge and experience
   - the specialist’s attitude to making mistakes
 
-  ##Cultural fit isn’t:
+  ##Cultural fit is not:
   - whether the specialist looks, talks or behaves in the same way as you
   - about having agile skills – that’s technical competence
 
