--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/culturalFitCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/culturalFitCriteriaOutcomes.yml
@@ -12,7 +12,7 @@ question_advice: |
   - how the supplier shares knowledge and experience
   - the supplier’s attitude to making mistakes
 
-  ##Cultural fit isn’t:
+  ##Cultural fit is not:
   - whether the supplier looks, talks or behaves in the same way as you
   - about having agile skills – that’s technical competence
 
