--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/modernSlaveryStatementOptional.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/modernSlaveryStatementOptional.yml
@@ -19,8 +19,8 @@ type: upload
 
 validations:
   - name: file_is_open_document_format
-    message: Your document is not in an open format. Please save as an Open Document Format (ODF) or PDF/A (eg .pdf, .odt).
+    message: The selected document must be an Open Document Format (ODF) or PDF/A (eg .pdf, .odt)
   - name: file_is_less_than_5mb
-    message: Your document exceeds the 5MB limit. Please reduce file size.
+    message: The selected document must be smaller than 5MB
   - name: file_can_be_saved
-    message: Your document failed to upload. Please try again.
+    message: The selected document could not be uploaded - try again
