Remove please from DOS5 where possible
GDS style says we should avoid using please where possible.

--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/mitigatingFactors3.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/mitigatingFactors3.yml
@@ -1,6 +1,6 @@
 name: Mitigating factors for Modern Slavery reporting requirements
 question: >
-  If your organisation does not meet the requirements, please explain why.
+  If your organisation does not meet the requirements, explain why.
 type: textbox_large
 max_length_in_words: 500
 
