--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/mitigatingFactors.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/mitigatingFactors.yml
@@ -1,6 +1,6 @@
 name: Mitigating factors for discretionary exclusion ([[taxEvasion]] to [[misleadingInformation]])
 question: >
-  If you responded ‘yes’ to any of the questions [[taxEvasion]] to [[misleadingInformation]], please provide details of
+  If you responded ‘yes’ to any of the questions [[taxEvasion]] to [[misleadingInformation]], enter details of
   any mitigating factors that you think should be taken into consideration.
 type: textbox_large
 max_length_in_words: 500
