Enable prefill for 'Providing suitable services'
These questions were updated in 5a058d761e9ee31096047392355f59d18e3e8106. None of the changes were major, so we can enable prefill.

--- a/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
@@ -12,7 +12,7 @@
   name: Providing suitable services
   slug: providing-suitable-services
   editable: True
-  prefill: False
+  prefill: True
   description: |
     You must answer these questions to confirm that your services are suitable for Digital Outcomes and Specialists&nbsp;5.
 
