Enable prefill for 'What it means to be on DOS 5'
This set of questions was updated in ff63b37513f88f611653a158cef32174adfcfafc. The only substantive change was to change the start date in a hint. This is not significant, so we can enable prefill.

--- a/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
@@ -30,7 +30,7 @@
   name: What it means to be on Digital Outcomes and Specialists&nbsp;5
   slug: what-it-means-to-be-on-digital-outcomes-and-specialists-5
   editable: True
-  prefill: False
+  prefill: True
   description: |
     If you make an application to Digital Outcomes and Specialists&nbsp;5, you need to agree to the terms and conditions in the legal documentation.
 
