--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/mitigatingFactors2.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/mitigatingFactors2.yml
@@ -1,6 +1,6 @@
 name: Mitigating factors for tax returns
 question: >
-  If you responded ‘yes’ to either question [[unspentTaxConvictions]] or question [[GAAR]], please provide details of 
+  If you responded ‘yes’ to either question [[unspentTaxConvictions]] or question [[incorrectTaxReturns]], please provide details of
   any mitigating factors that you think should be taken into consideration.
 type: textbox_large
 max_length_in_words: 500
@@ -8,7 +8,7 @@ max_length_in_words: 500
 validations:
   - 
     name: answer_required
-    message: You need to answer this question because you answered ‘yes’ to either [[unspentTaxConvictions]] or [[GAAR]].
+    message: You need to answer this question because you answered ‘yes’ to either [[unspentTaxConvictions]] or [[incorrectTaxReturns]].
   -
     name: under_word_limit
     message: "Your answer must be no more than 500 words."
