Enable pre-fill for 'Working with government'
These questions were updated in c809cdb5acb7ae0e2265d6eddbf1623d50e64cea. Most questions were not substantively changed, so we can enable prefill. Change the ID of the two questions that were significantly changed to disable prefill for those questions.

Add values for the insurance question to make it easier to change the wording of the answers in future without breaking prefill.

--- a/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/declaration.yml
@@ -117,7 +117,7 @@
   name: Working with government
   slug: working-with-government
   editable: True
-  prefill: False
+  prefill: True
   description: |
     You must be able to truthfully answer ‘yes’ to every question on this page for your application to be considered eligible.
 
@@ -130,7 +130,7 @@
     - serviceStandard
     - transparentContracting
     - publishContracts
-    - safeguardOfficialInformation
+    - safeguardingOfficialInformation
     - safeguardPersonalData
     - skillsAndCapabilityAssessment
     - continuousProfessionalDevelopment
